AgriAutomationHub/build_log_profile.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:mergeDebugMlModels UP-TO-DATE
> Task :app:generateDebugMlModelClass UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
Note: [1] Wrote GeneratedAppGlideModule with: []
C:\Users\ASUS\OneDrive\Desktop\AgriAutomationHub\app\src\main\java\com\example\agriautomationhub\MainActivity.java:233: error: cannot find symbol
                        Toast.makeText(MainActivity.this, "Profile missing in DB for: " + uid, Toast.LENGTH_LONG)
                                                                                               ^
  symbol:   variable Toast
  location: class MainActivity
C:\Users\ASUS\OneDrive\Desktop\AgriAutomationHub\app\src\main\java\com\example\agriautomationhub\MainActivity.java:233: error: cannot find symbol
                        Toast.makeText(MainActivity.this, "Profile missing in DB for: " + uid, Toast.LENGTH_LONG)
                        ^
  symbol:   variable Toast
  location: class MainActivity
C:\Users\ASUS\OneDrive\Desktop\AgriAutomationHub\app\src\main\java\com\example\agriautomationhub\MainActivity.java:238: error: cannot find symbol
                    Toast.makeText(MainActivity.this, "Failed to fetch profile: " + e.getMessage(), Toast.LENGTH_LONG)
                                                                                                    ^
  symbol:   variable Toast
  location: class MainActivity
C:\Users\ASUS\OneDrive\Desktop\AgriAutomationHub\app\src\main\java\com\example\agriautomationhub\MainActivity.java:238: error: cannot find symbol
                    Toast.makeText(MainActivity.this, "Failed to fetch profile: " + e.getMessage(), Toast.LENGTH_LONG)
                    ^
  symbol:   variable Toast
  location: class MainActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors

> Task :app:compileDebugJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.7/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
21 actionable tasks: 1 executed, 20 up-to-date
